--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "foundation-sites": "~6.4.1",
     "jquery": ">=3.0.0",
     "jquery-ui": "^1.12.1",
+    "jquery.event.drag": "^2.2.2",
     "js-cookie": "^2.2.0",
     "motion-ui": "~1.2.2",
     "what-input": "^4.1.3"
